--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  geolocator: ^10.0.0
   image_picker: ^1.0.7
   permission_handler: ^11.3.1
   fl_chart: ^0.68.0
