--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   image_picker: ^1.0.7
   permission_handler: ^11.3.1
   fl_chart: ^0.68.0
+  # Tambahkan atau pastikan paket-paket ini ada
+  dio: ^5.0.0 # Versi bisa sedikit berbeda
   # convex_bottom_bar: ^3.2.0
 
   # The following adds the Cupertino Icons font to your application.
