--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Tambahkan atau pastikan paket-paket ini ada
   dio: ^5.0.0 # Versi bisa sedikit berbeda
   # convex_bottom_bar: ^3.2.0
+  flutter_map: ^7.0.0
+  latlong2: ^0.9.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
